Resources added
