# app/Http/Controllers/API/AuthController.php
@@ -1,0 +1,186 @@
+<?php
+
+namespace App\Http\Controllers\API;
+
+use Illuminate\Http\Request;
+use App\Http\Controllers\Controller;
+use App\User;
+use Validator;
+
+class AuthController extends Controller
+{
+    /**
+    * Register a new user.
+    *
+    * @param \Illuminate\Http\Request $request
+    * @return \Illuminate\Http\Response
+    *
+    * @SWG\Post(
+        * path="/api/register",
+        * tags={"Users"},
+        * summary="Create new User",
+        * @SWG\Parameter(
+            * name="body",
+            * in="body",
+            * required=true,
+            * @SWG\Schema(ref="#/definitions/User"),
+            * description="Json format",
+        * ),
+        * @SWG\Response(
+            * response=201,
+            * description="Success: A Newly Created User",
+            * @SWG\Schema(ref="#/definitions/User")
+        * ),
+        * @SWG\Response(
+            * response=200,
+            * description="Success: operation Successfully"
+        * ),
+        * @SWG\Response(
+            * response=401,
+            * description="Refused: Unauthenticated"
+        * ),
+        * @SWG\Response(
+            * response="422",
+            * description="Missing mandatory field"
+        * ),
+        * @SWG\Response(
+            * response="404",
+            * description="Not Found"
+        * )
+    * ),
+    */
+    public function register(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'email' =>
+            'required|string|email|max:255|unique:users',
+            'name' => 'required',
+            'password'=> 'required'
+        ]);
+        if ($validator->fails()) {
+            return response()->json($validator->errors(), 422);
+        }
+        $user = User::create([
+            'name' => $request->name,
+            'email' => $request->email,
+            'password' => bcrypt($request->password),
+        ]);
+
+        $token = auth()->login($user);
+
+        return response()->json([
+            'access_token' => $token,
+            'token_type' => 'bearer',
+            'expires_in' => auth()->factory()->getTTL() * 60
+        ], 201);
+    }
+    
+    /**
+    * Log in a user.
+    *
+    * @param \Illuminate\Http\Request $request
+    * @return \Illuminate\Http\Response
+    *
+    * @SWG\Post(
+        * path="/api/login",
+        * tags={"Users"},
+        * summary="loggin an user",
+        * @SWG\Parameter(
+            * name="body",
+            * in="body",
+            * required=true,
+            * @SWG\Schema(ref="#/definitions/User"),
+            * description="Json format",
+        * ),
+        * @SWG\Response(
+            * response=200,
+            * description="Success: operation Successfully"
+        * ),
+        * @SWG\Response(
+            * response=401,
+            * description="Refused: Unauthenticated"
+        * ),
+        * @SWG\Response(
+            * response="422",
+            * description="Missing mandatory field"
+        * ),
+        * @SWG\Response(
+            * response="404",
+            * description="Not Found"
+        * )
+    * ),
+    */
+    public function login(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'email' => 'required|string|email|max:255',
+            'password'=> 'required'
+        ]);
+        
+        if ($validator->fails()) {
+            return response()->json($validator->errors(), 422);
+        }
+
+        $credentials = $request->only(['email', 'password']);
+        if (!$token = auth()->attempt($credentials)) {
+            return response()->json(['error' => 'Invalid Credentials'], 400);
+        }
+
+        $current_user = $request->email;
+
+        return response()->json([
+            'access_token' => $token,
+            'token_type' => 'bearer',
+            'current_user' => $current_user,
+            'expires_in' => auth()->factory()->getTTL() * 60
+        ], 200);
+    }
+
+    /**
+    * Register a new user.
+    *
+    * @param \Illuminate\Http\Request $request
+    * @return \Illuminate\Http\Response
+    *
+    * @SWG\Post(
+        * path="/api/logout",
+        * tags={"Users"},
+        * summary="logout an user",
+        * @SWG\Parameter(
+            * name="body",
+            * in="body",
+            * required=true,
+            * @SWG\Schema(ref="#/definitions/User"),
+            * description="Json format",
+        * ),
+        * @SWG\Response(
+            * response=200,
+            * description="Success: operation Successfully"
+        * ),
+        * @SWG\Response(
+            * response=401,
+            * description="Refused: Unauthenticated"
+        * ),
+        * @SWG\Response(
+            * response="422",
+            * description="Missing mandatory field"
+        * ),
+        * @SWG\Response(
+            * response="404",
+            * description="Not Found"
+        * ),
+        * @SWG\Response(
+            * response="405",
+            * description="Invalid input"
+        * ),
+        * security={
+            * { "api_key":{} }
+        * }
+    * ),
+    */
+    public function logout(Request $request) {
+        auth()->logout(true); // Force token to blacklist
+        return response()->json(['success' => 'Logged out Successfully.'], 200);
+    }
+
+}
