# routes/api.php
@@ -17,6 +17,11 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
 });
 
+// Register Routes
+Route::post('register', 'API\AuthController@register');
+Route::post('login', 'API\AuthController@login');
+Route::post('logout', 'API\AuthController@logout');
+
 // Route::middleware('auth:api')->group(function () {
     Route::apiResources([
         'bikes' => 'API\BikeController',
@@ -25,3 +30,7 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
         'bikes/{bike}/ratings' => 'API\RatingController'
     ]);
 // });
+
+Route::middleware('jwt.auth')->get('me', function(Request $request){
+    return auth()->user();
+});
